Fix layout issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,15 +4,17 @@
     box-sizing: border-box;
 }
 
+html ,
 body {
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr;
-    height: 100%;
+    height: 100vh;
 }
 
 .sidebar {
@@ -20,11 +22,11 @@ body {
     background-color: #2280fca8;
 }
 
-.content-container {
+.container-content {
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 80px 4fr;
 }
 
 .header {
@@ -35,32 +37,78 @@ body {
 .main-content {
     grid-row: 2 / 3;
     display: grid;
-    grid-template-rows: 1fr 5fr;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 2fr 1fr;
     background-color: lightgray;
+    height: calc(100vh - 80px);
+    padding-top: 25px;
+    padding-bottom: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .projects {
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     grid-row: 1 / 2;
 }
 
 .right-sec {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
     display: grid;
+    grid-template-rows: auto 1fr auto 1fr;
     grid-template-columns: 1fr;
-    grid-template-rows: 3fr 1fr 3fr;
+    height: calc(100% - 80px);
 }
 
+.announcements {
+    grid-row: 1 / 2;
+    padding-left: 25px;
+}
 
+.announcements,
+.projects,
+.trending {
+    padding-bottom: 25px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.announcements-content {
+    grid-row: 2 / 3;
+    display: grid;
+    gap: 10px;
+    height: calc(100% - 80px);
+    padding-bottom: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.trending {
+    grid-row: 3 / 4;
+    align-self: self-end
+}
+
+.trending-content {
+    grid-row: 4 / 5;
+    background-color: white;
+    align-self: self-end
+}
+
+.trending-content,
+.announcement-cards {
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
 .cards {
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: auto;
     gap: 10px;
 }
 
@@ -70,4 +118,14 @@ body {
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.content-title {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.content-text {
+    font-size: 14px;
+    color: #555;
 }
